New secrets are not properly saved to secret agents
Hi,
with recent NM version (1.12.4), but probably even with older versions, when I change a password for either a Wireless connection or a VPN one, I see attempt to store the secrets in our secret agent we have in plasma-nm (KDE), but it tries to store the old password, not the new one. When I change the connection to store secrets to NetworkManager, then the new password is stored correctly. I double-checked what I send back to NM and I definitely send a new password when calling Connection->Update() over DBus and given NetworkManager is able to store the new password properly, it appears to be a bug in NetworkManager.