settings: apply agent-owned secrets from the new connection on update

When updating a connection passing agent-owned secret, they are lost
from @reread_connection after the settings-plugin persists the
connection. Therefore we need to cache and reapply them separately to
the connection so that they can be saved to secret agents later.

https://gitlab.freedesktop.org/NetworkManager/NetworkManager/issues/82
(cherry picked from commit a3383726dce09255b5413a6230be580856ab212c)
(cherry picked from commit 95d9fd387bcdd22e11cca98b540bb68fbd8744a0)